objects/ssot__PartyIncome__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChangeReason__c</fullName>
        <label>Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployerAddress__c</fullName>
        <label>Employer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployerId__c</fullName>
        <label>Employer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployerName__c</fullName>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployerPhone__c</fullName>
        <label>Employer Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Employer__c</fullName>
        <label>Employer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Income Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeAmount__c</fullName>
        <label>Income Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeFrequency__c</fullName>
        <label>Income Frequency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeLossPercent__c</fullName>
        <label>Income Loss Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeStatus__c</fullName>
        <label>Income Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncomeType__c</fullName>
        <label>Income Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JobTitle__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetIncome__c</fullName>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyIncomeSourceId__c</fullName>
        <label>Party Income Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyIncomeSourceObjectName__c</fullName>
        <label>Party Income Source Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyIncome_PartyId_map_Party_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyIncome_PartyId_map_Party_Id_N_1</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyIncome_PartyId_map_Party_Id_N_1</relationshipLabel>
        <relationshipName>PartyIncome_PartyId_map_Party_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291040739_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyIncome_EmployerId_map_Account_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyIncome_EmployerId_map_Account_I_rel</relationshipLabel>
        <relationshipName>rel_1720291040739_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291851147_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyIncome_PartyIncomeSourceId_map__rel</label>
        <referenceTo>ssot__PersonEmployment__dlm</referenceTo>
        <relationshipLabel>PartyIncome_PartyIncomeSourceId_map__rel</relationshipLabel>
        <relationshipName>rel_1720291851147_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291852558_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyIncome_PartyIncomeSourceId_map__rel</label>
        <referenceTo>ssot__PartyFinancialAsset__dlm</referenceTo>
        <relationshipLabel>PartyIncome_PartyIncomeSourceId_map__rel</relationshipLabel>
        <relationshipName>rel_1720291852558_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>